--- a/Apps/Android/app/build.gradle
+++ b/Apps/Android/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:support-v13:25.3.1'
+
+    compile 'com.google.android.gms:play-services-auth:9.8.0'
 }
