--- a/Apps/Android/app/build.gradle
+++ b/Apps/Android/app/build.gradle
@@ -3,12 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+
     defaultConfig {
         applicationId "com.whirlwind.school1"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 35
-        versionName "1.1.1"
     }
     buildTypes {
         release {
@@ -20,30 +19,8 @@ android {
             applicationIdSuffix ".d"
         }
     }
-    return void
-}
-
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 dependencies {
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
-
-    compile 'tech.gusavila92:java-android-websocket-client:1.1.2'
+    implementation project(":base")
 }
