--- a/Apps/Android/base/src/main/AndroidManifest.xml
+++ b/Apps/Android/base/src/main/AndroidManifest.xml
@@ -20,20 +20,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <intent-filter android:autoVerify="true">
+            <meta-data
+                android:name="default-url"
+                android:value="https://www.whirlwind-studios.org/school1" />
+
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="http" />
-                <data android:scheme="https" />
-                <data android:host="whirlwind-studios.org" />
+                <data
+                    android:host="whirlwind-studios.org"
+                    android:path="/school1"
+                    android:scheme="http" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-            <meta-data
-                android:name="default-url"
-                android:value="https://www.whirlwind-studios.org/school1" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="whirlwind-studios.org"
+                    android:path="/school1"
+                    android:scheme="https" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
